oss/tui-markdown/src/renderer/snapshots/tui_markdown__renderer__footnote__tests__footnotes__multiline_definition_has_exact_layout.snap
---
source: tui-markdown/src/renderer/footnote.rs
expression: |-
  from_str(indoc!("
                      Text[^one]
  
                      [^one]: First line
                          continued line.
                  "))
---
Text::from_iter([
    Line::from_iter([
        Span::from("Text"),
        Span::from("[one]").dim().italic(),
    ]),
    Line::default(),
    Line::from_iter([
        Span::from("[one]: ").dim(),
        Span::from("First line"),
        Span::from(" "),
        Span::from("continued line."),
    ]).dim(),
])
