oss/tui-markdown/src/renderer/snapshots/tui_markdown__renderer__footnote__tests__footnotes__multiple_definition_paragraphs_keep_blank_line.snap
---
source: tui-markdown/src/renderer/footnote.rs
expression: |-
  from_str(indoc!("
                      Text[^one]
  
                      [^one]: First paragraph.
  
                          Second paragraph.
                  "))
---
Text::from_iter([
    Line::from_iter([
        Span::from("Text"),
        Span::from("[one]").dim().italic(),
    ]),
    Line::default(),
    Line::from_iter([
        Span::from("[one]: ").dim(),
        Span::from("First paragraph."),
    ]).dim(),
    Line::default().dim(),
    Line::from("Second paragraph.").dim(),
])
